--- a/Prototypes/CryptoCompare/pom.xml
+++ b/Prototypes/CryptoCompare/pom.xml
@@ -8,5 +8,30 @@
     <artifactId>cryptofolio</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
 
+        <!--  Gson: Java to Json conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--  Apache HttpClient for Rest calls -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.4</version>
+        </dependency>
+
+        <!-- Fluent facade API exposes only the most fundamental functions of HttpClient
+         and is intended for simple use cases that do not require the full flexibility of HttpClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.4</version>
+        </dependency>
+
+    </dependencies>
 </project>
