--- a/Prototypes/CryptoCompare/pom.xml
+++ b/Prototypes/CryptoCompare/pom.xml
@@ -10,12 +10,19 @@
 
     <dependencies>
 
-        <!--  Gson: Java to Json conversion -->
+        <!--  Gson (Google): Java to Json conversion -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!--  Guava (Google): Core library for Java -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.6-jre</version>
         </dependency>
 
         <!--  Apache HttpClient for Rest calls -->
@@ -31,6 +38,18 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
             <version>4.5.4</version>
+        </dependency>
+
+        <!-- Logging: using log4j with the facade SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
         </dependency>
 
     </dependencies>
