--- a/Prototypes/CryptoCompare/pom.xml
+++ b/Prototypes/CryptoCompare/pom.xml
@@ -59,5 +59,17 @@
             <version>1.0.5</version>
         </dependency>
 
+        <!-- Test library-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
     </dependencies>
 </project>
