--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,14 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Intellij
+.idea/
+*.iml
+ 
+# Mac
+.DS_Store
+ 
+# Maven
+log/
+target/
