--- a/CryptoFolio/pom.xml
+++ b/CryptoFolio/pom.xml
@@ -104,5 +104,14 @@
             <version>5.1.45</version>
         </dependency>
 
-    </dependencies>
-</project>
+        <!--
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-context</artifactId>
+                    <version>5.0.4.RELEASE</version>
+                </dependency>
+ -->
+
+
+            </dependencies>
+        </project>
