--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 sudo: false
+services:
+  - mysql
+before_install:
+  - mysql -u root --password="" < test/travis.sql
 script: mvn -f CryptoFolio/ clean verify
