--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ sudo: false
 services:
   - mysql
 before_install:
-  - mysql -u root --password="" < test/travis.sql
+  - mysql -u root --password="" < CryptoFolio/src/test/ressources/travis.sql
 script: mvn -f CryptoFolio/ clean verify
