--- a/CryptoFolio/pom.xml
+++ b/CryptoFolio/pom.xml
@@ -85,6 +85,12 @@
             <version>4.12</version>
         </dependency>
         <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId> <!-- Allow parametrized testing -->
+            <version>1.1.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.13.0</version>
@@ -104,14 +110,5 @@
             <version>5.1.45</version>
         </dependency>
 
-        <!--
-                <dependency>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-context</artifactId>
-                    <version>5.0.4.RELEASE</version>
-                </dependency>
- -->
-
-
-            </dependencies>
-        </project>
+    </dependencies>
+</project>
