Revert "Add IDE specific files"
This reverts commit 9c6b7077ed5eb8441ef530f8bb9ed2482676f397.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Intellij
+.idea/
+*.iml
  
 # Mac
 .DS_Store
