--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 sudo: false
-script: mvn -f Prototypes/CryptoCompare/ clean verify
+services:
+  - mysql
+before_install:
+  - mysql -u root --password="" < CryptoFolio/src/test/ressources/travis.sql
+script: mvn -f CryptoFolio/ clean verify
